--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name"        : "greenf/quasar",
-    "description" : "DDD generator",
+    "description" : "DDD app generator",
     "type"        : "library",
     "require"     : {
         "php": ">=7.0"
@@ -8,7 +8,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "symfony/console": "^4.1",
-        "nette/php-generator": "^3.2"
+        "nette/php-generator": "^3.2",
+        "graphaware/neo4j-php-client": "^4.0"
 
     },
     "autoload"    : {
@@ -16,7 +17,12 @@
             "Greenf\\Quasar\\": "src/"
         },
         "exclude-from-classmap": [
-            "/Tests/"
+            "/tests/"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Greenf\\Quasar\\": "tests/"
+        }
     }
 }
